# wikipedia_scrapper

./: Dockerfile  docker-compose.yml  pyproject.toml
commands/: run_get_data.sh  run_print_data.sh
src/: DTOs.py  database.py  get_data.py  models.py  orm.py  print_data.py  settings.py  web_scrapper.py
