[tool.poetry]
name = "wikipedia-scrapper"
version = "0.1.0"
description = ""
authors = ["sasuke13 <bgnydyn@gmail.com>"]
readme = "README.md"
packages = [{include = "wikipedia_scrapper"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.3"
beautifulsoup4 = "^4.12.3"
html5lib = "^1.1"
sqlalchemy = "^2.0.29"
psycopg = "^3.1.18"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
pandas = "^2.2.1"
flake8 = "^7.0.0"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
